# craftmine

./: CMakeLists.txt  README.md
res/: textures.json
src/: application.cpp  application.h  game.cpp  game.h  main.cpp
src/core/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Controller.cpp  Controller.h  Entity.cpp  Entity.h  Interactables.cpp  Interactables.h  Inventory.cpp  Inventory.h  Math.h  Player.cpp  Player.h  Projectiles.cpp  Projectiles.h  Visuals.cpp  Visuals.h  Weapon.cpp  Weapon.h  World.cpp  World.h
src/renderer/: Buffer.h  Font.cpp  Font.h  IndexBuffer.cpp  IndexBuffer.h  Interface.cpp  Interface.h  Mesh.cpp  Mesh.h  QuadRenderer.cpp  QuadRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/save/: SaveSystem.cpp  SaveSystem.h
src/shaders/: interface.glsl  voxel.glsl
